2002-02-01  Havoc Pennington  <hp@pobox.com>

	* Makefile (bindir): use a "bindir" variable so "make install
	bindir=/foo" works

	* jhbuild.py (do_build): if passing extra args to build mode, 
	take them as a list of modules to build

	* moduleinfo.py (head): make metacity depend on gconf

Thu Jan 24 13:12:08 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py (head): add libgnomeprint, libgnomeprintui, and gedit

Sat Jan 19 20:31:16 2002  Owen Taylor  <otaylor@redhat.com>

	* moduleinfo.py (head): Add gtk-engines.

Thu Jan 17 15:07:15 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py (head): add profterm and gdm2

2002-01-16  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (head): add orbit-python info.

	* jhbuild.py (do_build): expand the skip list to include dependent
	modules.  So --skip=libgnomeui will skip glib, gtk+, libgnome,
	etc.  Now it is actually useful.

2002-01-14  Alex Graveley  <alex@ximian.com>

	* bootstrap.py (bootstraps): Add python bootstrap for 2.x.
	(Bootstrap.build): Allow tarballs to end in tgz, 
	(Bootstrap.wants_package): Remove 'x' in the version string to let
	us display "checking for python 2.x" but really just look for '2.'
	This should probably use regexps.

2002-01-12   Xavier Ordoquy  <MCArkan@gael.sourceforge.net>

	* moduleinfo.py: added gnome-common to gnome-mime-data
	and libgtop to gnome-core.

Fri Jan 11 12:08:14 2002  Owen Taylor  <otaylor@redhat.com>

	* moduleinfo.py (head): gtkhtml2 now depends on gail, not
	vice-versa.

Thu Jan 10 16:18:20 2002  Jonathan Blandford  <jrb@redhat.com>

	* module.py (BuildScript.build): Allow you to re ./configure on
	error.
	(moduleinfo.py): Update dependencies on gnome-control-center

Tue Jan  8 12:05:06 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py: whoops.  add esound.  Also add gconf-editor

Mon Jan  7 20:00:42 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py: nautilus depends on esound.  gnome-control-center