@@ -1,3 +1,8 @@
+2002-02-05  Gediminas Paulauskas <menesis@delfi.lt>
+
+	*  moduleinfo.py (head): add gnome-media, bug-buddy, gnome-games;
+	remove libcapplet; fix gal
+
 2002-02-01  Havoc Pennington  <hp@pobox.com>
 
 	* Makefile (bindir): use a "bindir" variable so "make install
